2011-01-15 Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.mgw: Sync with configure.

2011-01-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* tutorial/linepoin.plt: Avoid deprecated syntax.

	* win/gnuplot.iss: Create startup menu item for tutorial.pdf.

	* config/mingw/Makefile config/msvc/Makefile src/plot.c:
	GNUPLOT_SHARE_DIR is relative to gnuplot directory on Windows.
	Extend build support for documentation, include in installer.

2012-01-12  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* win/gnuplot.iss: Japanese translation

2012-01-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util3d.h src/util3d.c (edge3d_intersect two_edge3d_intersect) 
	src/graph3d.c (plot3d_lines_pm3d):  The utility routines in util3d
	assumed that a 3D curve is always traversed in ascending order of the
	constituent points.  But plot3d_lines_pm3d scans in both directions,
	leading to incorrect clipping and possible array over-run when the
	utility routines were called.  Furthermore, the arrays holding the
	scan direction info were never initialized.
	Bug #3471163

2012-01-09  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/Makefile.in src/term.h src/makefile.awc src/Makefile.all
	term/mac.trm:
	Remove vestigial terminal wrapper (contents are long gone).

2012-01-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c:  Allow shell commands from ~/.gnuplot but not from shared
	initialization files.

	* configure.in: Report status of aquaterm configuration correctly
	(Lutz Maibaum).

2012-01-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lf_pop): If the current input stream from "load file" is
	really a pipe, close it with pclose() rather than fclose().
	Bug #3470351

2012-01-07  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotScene.cpp: Normalize the zoom rectangle to avoid
	redrawing artifacts

2012-01-05  Ethan A Merritt  <merritt@u.washington.edu>
